<resources>
    <string name="app_name">ChainGrabs</string>
    <string name="nina_grabs">Nina\'s Grabs</string>
    <string name="grab_backhand">Backhand Slaps</string>
    <string name="grab_betrayer">Betrayer</string>
    <string name="grab_crab">Crab Hold</string>
    <string name="seq_seoi">Seoi Gyaku Juji-gatame</string>
    <string name="seq_triple">Triple Slaps</string>
    <string name="seq_neck">Neck Crusher</string>
    <string name="seq_"></string>
    <string name="choose_grab">Choose Grab</string>
    <string name="grab_name">Grab Name</string>
    <string name="textview">TextView</string>
    <string name="king_grabs">King\'s Grabs</string>
    <string name="grab_breaker">Arm Breaker</string>
    <string name="grab_heel">Standing Heel Hold</string>
    <string name="grab_bomb">Reverse Special Stretch Bomb</string>
    <string name="grab_slam">Reverse Arm Slam</string>
    <string name="grab_cobra">Cobra Clutch</string>
    <string name="break_practice">Grab Break Practice</string>
    <string name="current_score">Current Score:</string>
    <string name="pause">Pause</string>
    <string name="see_menu">Open Menu</string>
</resources>